<resources>
    <string name="app_name">AndroidAtlas</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_UI_121">UI—1.2.1-Paint</string>
    <string name="menu_UI_122">UI—1.2.2-Filter&amp;Xfermode</string>
    <string name="menu_UI_123">UI—1.2.3-Canvas&amp;Particle</string>
    <string name="menu_UI_124">UI—1.2.4-CanvasCase</string>
    <string name="menu_UI_125">UI—1.2.5-BezierPath</string>
    <string name="menu_UI_141">UI—1.4.1-ObjectAnimation</string>
    <string name="menu_UI_142">UI—1.4.2-MusicAnimation</string>
    <string name="menu_Fit_213">Fit-2.1.3-Density</string>
    <string name="menu_Fit_214">Fit-2.1.4-CutoutDisplay</string>
    <string name="menu_Fit_215">Fit-2.1.5-MusicAdapter</string>
    <string name="menu_Fit_215_2">Fit-2.1.5.2-RedPackage</string>
    <string name="menu_Design_312_313">Design-3.1.2&amp;3-Recycle&amp;Coord&amp;Nested</string>
    <string name="menu_Design_314">Design-3.1.4-CardView</string>
    <string name="menu_Design_321">Design-3.2.1-CustomizedView</string>
    <string name="menu_Design_321_2">Design-3.2.1.2-FlowLayout</string>
    <string name="menu_Design_322">Design-3.2.2-MaualRecyclerView</string>
    <string name="menu_Design_323">Design-3.2.3-SVG&amp;Pic</string>
    <string name="menu_Design_324">Design-3.2.4-AliVLayout</string>
    <string name="menu_Design_325">Design-3.2.5-CloudMusic</string>


    <string name="list_name">复古流行|新世纪的一支复古药剂    复古流行|新世纪的一支复古药剂    复古流行|新世纪的一支复古药剂</string>
    <string name="list_name_default">歌单</string>
    <array name="music">
        <item>足够</item>
        <item>情话</item>
        <item>虚拟</item>
        <item>恶作剧</item>
        <item>东西</item>
        <item>我爱你</item>
        <item>了解</item>
        <item>狂恋你</item>
        <item>我多喜欢你 你会知道吗</item>
        <item>想你的时候</item>
        <item>嫉妒</item>
        <item>温柔</item>
        <item>心事</item>
        <item>年少有为</item>
        <item>像风一样</item>
        <item>成全</item>
        <item>水星记</item>
    </array>


    <string name="accessibility_name">redpackage</string>
    <string name="accessibility_description">redpackage_plugin</string>

</resources>
