<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/ui_121"
            android:title="@string/menu_UI_121" />
        <item
            android:id="@+id/ui_122"
            android:title="@string/menu_UI_122" />
        <item
            android:id="@+id/ui_123"
            android:title="@string/menu_UI_123" />
        <item
            android:id="@+id/ui_124"
            android:title="@string/menu_UI_124" />

        <item
            android:id="@+id/ui_125"
            android:title="@string/menu_UI_125" />
        <item
            android:id="@+id/ui_126"
            android:title="@string/menu_UI_126" />
        <item android:title="@string/menu_UI_121" />
        <item android:title="@string/menu_UI_122" />
        <item android:title="@string/menu_UI_123" />
        <item android:title="@string/menu_UI_124" />

        <item android:title="@string/menu_UI_125" />
        <item android:title="@string/menu_UI_126" />
        <item android:title="@string/menu_UI_121" />
        <item android:title="@string/menu_UI_122" />
        <item android:title="@string/menu_UI_123" />
        <item android:title="@string/menu_UI_124" />

        <item android:title="@string/menu_UI_125" />
        <item android:title="@string/menu_UI_126" />
    </group>

</menu>
